@@ -1,3 +1,14 @@
+2006-01-24  JJ Merelo  <jmerelo@geneura.ugr.es>
+
+	* MANIFEST: 
+	Added new files to the examples subdir; added the sort option to
+	the podcast function, and fixed a few bugs in the test files. Now
+	files in the dir-to-podcast can have the MP3 or mp3 extension.
+
+2005-09-10  Juan J. Merelo Guervós  <jmerelo@geneura.ugr.es>
+
+	* "length" tag added, thanks to Juan Schwindt. Deleted "Podcast" from comment.
+
 Revision history for Perl extension MP3::Podcast.
 
 0.01  Tue Apr 12 14:01:20 2005
